Testing and Updating Examples (#837)
* updated viewshed gpu example

* updated classification notebook with more reliable data source and rioxarray loading

* bunch of notebook updates

* ran and cleared example noe notebooks

* The sentienl cloudless mosaic notebook will removed because it relies on an external service and only uses the true_color function from xarray-spatial, so its generally unfocused and won't be maintained.

* tested and cleared all notebooks

--- a/examples/user_guide/1_Surface.ipynb
+++ b/examples/user_guide/1_Surface.ipynb
@@ -44,7 +44,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:38.297161Z",
+     "iopub.status.busy": "2026-01-23T19:10:38.297071Z",
+     "iopub.status.idle": "2026-01-23T19:10:39.913968Z",
+     "shell.execute_reply": "2026-01-23T19:10:39.913067Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -74,7 +81,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:39.915617Z",
+     "iopub.status.busy": "2026-01-23T19:10:39.915336Z",
+     "iopub.status.idle": "2026-01-23T19:10:41.680731Z",
+     "shell.execute_reply": "2026-01-23T19:10:41.679983Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -98,7 +112,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:41.698559Z",
+     "iopub.status.busy": "2026-01-23T19:10:41.698410Z",
+     "iopub.status.idle": "2026-01-23T19:10:41.774554Z",
+     "shell.execute_reply": "2026-01-23T19:10:41.774067Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shade(terrain, cmap=Elevation, how='linear')"
@@ -118,7 +139,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:41.775743Z",
+     "iopub.status.busy": "2026-01-23T19:10:41.775628Z",
+     "iopub.status.idle": "2026-01-23T19:10:41.865624Z",
+     "shell.execute_reply": "2026-01-23T19:10:41.864594Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import hillshade\n",
@@ -141,7 +169,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:41.867801Z",
+     "iopub.status.busy": "2026-01-23T19:10:41.867692Z",
+     "iopub.status.idle": "2026-01-23T19:10:42.906206Z",
+     "shell.execute_reply": "2026-01-23T19:10:42.905425Z"
+    }
+   },
    "outputs": [],
    "source": [
     "terrain_elevation = shade(terrain, cmap=Elevation, alpha=128, how='linear')\n",
@@ -164,7 +199,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:42.908590Z",
+     "iopub.status.busy": "2026-01-23T19:10:42.908484Z",
+     "iopub.status.idle": "2026-01-23T19:10:43.167750Z",
+     "shell.execute_reply": "2026-01-23T19:10:43.166775Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import slope\n",
@@ -197,7 +239,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:43.170555Z",
+     "iopub.status.busy": "2026-01-23T19:10:43.170437Z",
+     "iopub.status.idle": "2026-01-23T19:10:44.302977Z",
+     "shell.execute_reply": "2026-01-23T19:10:44.302073Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import curvature\n",
@@ -232,7 +281,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:44.306651Z",
+     "iopub.status.busy": "2026-01-23T19:10:44.306537Z",
+     "iopub.status.idle": "2026-01-23T19:10:44.525415Z",
+     "shell.execute_reply": "2026-01-23T19:10:44.524460Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import aspect\n",
@@ -272,7 +328,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:44.527949Z",
+     "iopub.status.busy": "2026-01-23T19:10:44.527841Z",
+     "iopub.status.idle": "2026-01-23T19:10:45.170243Z",
+     "shell.execute_reply": "2026-01-23T19:10:45.169701Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import viewshed\n",
@@ -315,7 +378,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:45.171678Z",
+     "iopub.status.busy": "2026-01-23T19:10:45.171571Z",
+     "iopub.status.idle": "2026-01-23T19:10:50.580930Z",
+     "shell.execute_reply": "2026-01-23T19:10:50.580320Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Will take some time to run...\n",
@@ -347,7 +417,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:50.582021Z",
+     "iopub.status.busy": "2026-01-23T19:10:50.581916Z",
+     "iopub.status.idle": "2026-01-23T19:10:51.555064Z",
+     "shell.execute_reply": "2026-01-23T19:10:51.554444Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import viewshed\n",
@@ -385,7 +462,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:10:51.559087Z",
+     "iopub.status.busy": "2026-01-23T19:10:51.558973Z",
+     "iopub.status.idle": "2026-01-23T19:10:52.140227Z",
+     "shell.execute_reply": "2026-01-23T19:10:52.139511Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%time view = viewshed(terrain, x=OBSERVER_X, y=OBSERVER_Y, observer_elev=100)\n",
@@ -420,8 +504,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
