--- a/examples/user_guide/3_Zonal.ipynb
+++ b/examples/user_guide/3_Zonal.ipynb
@@ -28,7 +28,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:16.666839Z",
+     "iopub.status.busy": "2026-01-23T19:11:16.666728Z",
+     "iopub.status.idle": "2026-01-23T19:11:17.440108Z",
+     "shell.execute_reply": "2026-01-23T19:11:17.439328Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -55,7 +62,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:17.442135Z",
+     "iopub.status.busy": "2026-01-23T19:11:17.441877Z",
+     "iopub.status.idle": "2026-01-23T19:11:18.403316Z",
+     "shell.execute_reply": "2026-01-23T19:11:18.402533Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -82,7 +96,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:18.421283Z",
+     "iopub.status.busy": "2026-01-23T19:11:18.421142Z",
+     "iopub.status.idle": "2026-01-23T19:11:18.496844Z",
+     "shell.execute_reply": "2026-01-23T19:11:18.496345Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shade(terrain, cmap=Elevation, how='linear')"
@@ -118,7 +139,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:18.498381Z",
+     "iopub.status.busy": "2026-01-23T19:11:18.498263Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.291790Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.291200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import hillshade\n",
@@ -153,7 +181,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:20.295281Z",
+     "iopub.status.busy": "2026-01-23T19:11:20.295165Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.468030Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.467305Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import zonal_stats\n",
@@ -176,7 +211,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:20.469879Z",
+     "iopub.status.busy": "2026-01-23T19:11:20.469694Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.509946Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.509288Z"
+    }
+   },
    "outputs": [],
    "source": [
     "custom_stats = dict(elevation_change=lambda zone: zone.max() - zone.min(),\n",
@@ -199,35 +241,64 @@
    "source": [
     "## Zonal crosstab\n",
     "\n",
-    "Zonal crosstab function can be used when we want to calculate cross-tabulated (categorical stats) areas between two datasets. As an example, assume we have gender data (male/female), and we want to see how all the gender groups distributed over all the zones defined above.\n",
+    "The zonal crosstab function calculates cross-tabulated (categorical) areas between two datasets. As an example, assume we have a forest survey with different tree species mapped across the terrain, and we want to see how the tree species are distributed along each segment of our hiking trail.\n",
     "\n",
-    "First, let's create a mock dataset for gender: 1 for male, and 2 for female. "
+    "First, let's create a mock dataset for tree species: 1 for Oak, 2 for Pine, and 3 for Maple."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:20.511434Z",
+     "iopub.status.busy": "2026-01-23T19:11:20.511332Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.615404Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.614778Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# define a mask where 0s are water, and 1s are land areas\n",
     "mask = terrain.data.astype(bool).astype(int)\n",
     "\n",
-    "# gender data where 0s are nodata, 1s are male, and 2s are female\n",
-    "# assume that the population only takes 10% overall, and the probability of male and female are equal.\n",
-    "genders = np.random.choice([0, 1, 2], p=[0.9, 0.05, 0.05], size=zones_agg.shape) * mask\n",
-    "genders_agg = xr.DataArray(genders, coords=terrain.coords, dims=terrain.dims)\n",
+    "# tree species data where 0s are no trees, 1 = Oak, 2 = Pine, 3 = Maple\n",
+    "# assume forest covers about 30% of the land, with species distributed across elevations\n",
+    "tree_species = np.random.choice([0, 1, 2, 3], p=[0.7, 0.1, 0.12, 0.08], size=zones_agg.shape) * mask\n",
+    "tree_species_agg = xr.DataArray(tree_species, coords=terrain.coords, dims=terrain.dims)\n",
     "\n",
-    "# visualize the results\n",
-    "genders_shaded = shade(genders_agg, cmap=['white', 'blue', 'red'])\n",
-    "stack(genders_shaded, terrain_shaded)"
+    "# visualize the results: green shades for different tree species\n",
+    "tree_colors = ['white', '#228B22', '#006400', '#32CD32']  # No trees, Oak (forest green), Pine (dark green), Maple (lime green)\n",
+    "trees_shaded = shade(tree_species_agg, cmap=tree_colors)\n",
+    "stack(trees_shaded, zones_shaded, terrain_shaded)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's calculate the stats between the 2 datasets of genders and zones."
+    "Now, let's calculate the crosstab between the tree species and trail zones to see how many of each species we'd encounter on each trail segment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:20.617267Z",
+     "iopub.status.busy": "2026-01-23T19:11:20.617161Z",
+     "iopub.status.idle": "2026-01-23T19:11:20.646138Z",
+     "shell.execute_reply": "2026-01-23T19:11:20.645654Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from xrspatial import zonal_crosstab\n",
+    "\n",
+    "# Calculate crosstab: rows are trail segments, columns are tree species (1=Oak, 2=Pine, 3=Maple)\n",
+    "result = zonal_crosstab(zones=zones_agg, values=tree_species_agg, zone_ids=[11, 12, 13, 14, 15, 16], cat_ids=[1, 2, 3])\n",
+    "result.columns = ['Trail Segment', 'Oak', 'Pine', 'Maple']\n",
+    "result"
    ]
   },
   {
@@ -235,16 +306,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from xrspatial import zonal_crosstab\n",
-    "\n",
-    "zonal_crosstab(zones=zones_agg, values=genders_agg, zone_ids=[11, 12, 13, 14, 15, 16], cat_ids=[1, 2])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
