--- a/examples/user_guide/4_Focal.ipynb
+++ b/examples/user_guide/4_Focal.ipynb
@@ -19,7 +19,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:23.349087Z",
+     "iopub.status.busy": "2026-01-23T19:11:23.348976Z",
+     "iopub.status.idle": "2026-01-23T19:11:24.267494Z",
+     "shell.execute_reply": "2026-01-23T19:11:24.266796Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -49,7 +56,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:24.268991Z",
+     "iopub.status.busy": "2026-01-23T19:11:24.268731Z",
+     "iopub.status.idle": "2026-01-23T19:11:25.935258Z",
+     "shell.execute_reply": "2026-01-23T19:11:25.934791Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -80,7 +94,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:25.953870Z",
+     "iopub.status.busy": "2026-01-23T19:11:25.953712Z",
+     "iopub.status.idle": "2026-01-23T19:11:27.004284Z",
+     "shell.execute_reply": "2026-01-23T19:11:27.003272Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import hillshade\n",
@@ -124,7 +145,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:27.006889Z",
+     "iopub.status.busy": "2026-01-23T19:11:27.006769Z",
+     "iopub.status.idle": "2026-01-23T19:11:28.733873Z",
+     "shell.execute_reply": "2026-01-23T19:11:28.732500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import convolution\n",
@@ -177,7 +205,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:28.738911Z",
+     "iopub.status.busy": "2026-01-23T19:11:28.738786Z",
+     "iopub.status.idle": "2026-01-23T19:11:28.984077Z",
+     "shell.execute_reply": "2026-01-23T19:11:28.983463Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import convolution\n",
@@ -225,7 +260,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:28.988225Z",
+     "iopub.status.busy": "2026-01-23T19:11:28.988126Z",
+     "iopub.status.idle": "2026-01-23T19:11:28.991507Z",
+     "shell.execute_reply": "2026-01-23T19:11:28.990905Z"
+    }
+   },
    "outputs": [],
    "source": [
     "kernel = convolution.circle_kernel(cellsize_x, cellsize_y, 5*cellsize_x)\n",
@@ -235,7 +277,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:28.992468Z",
+     "iopub.status.busy": "2026-01-23T19:11:28.992362Z",
+     "iopub.status.idle": "2026-01-23T19:11:29.219168Z",
+     "shell.execute_reply": "2026-01-23T19:11:29.218635Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.focal import hotspots\n",
@@ -254,7 +303,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:29.220364Z",
+     "iopub.status.busy": "2026-01-23T19:11:29.220258Z",
+     "iopub.status.idle": "2026-01-23T19:11:29.293321Z",
+     "shell.execute_reply": "2026-01-23T19:11:29.292703Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# visualize the result\n",
@@ -262,11 +318,32 @@
     "\n",
     "stack(hotspots_shaded, terrain_shaded)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
