--- a/examples/user_guide/5_Classification.ipynb
+++ b/examples/user_guide/5_Classification.ipynb
@@ -28,7 +28,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:36.363326Z",
+     "iopub.status.busy": "2026-01-23T19:11:36.363219Z",
+     "iopub.status.idle": "2026-01-23T19:11:37.293470Z",
+     "shell.execute_reply": "2026-01-23T19:11:37.292946Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -56,7 +63,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:37.295158Z",
+     "iopub.status.busy": "2026-01-23T19:11:37.294889Z",
+     "iopub.status.idle": "2026-01-23T19:11:40.115752Z",
+     "shell.execute_reply": "2026-01-23T19:11:40.114957Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -96,7 +110,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:40.142621Z",
+     "iopub.status.busy": "2026-01-23T19:11:40.142472Z",
+     "iopub.status.idle": "2026-01-23T19:11:40.382126Z",
+     "shell.execute_reply": "2026-01-23T19:11:40.381610Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import hillshade\n",
@@ -122,7 +143,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:40.384520Z",
+     "iopub.status.busy": "2026-01-23T19:11:40.384397Z",
+     "iopub.status.idle": "2026-01-23T19:11:40.467270Z",
+     "shell.execute_reply": "2026-01-23T19:11:40.466380Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.classify import equal_interval\n",
@@ -146,7 +174,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:40.468564Z",
+     "iopub.status.busy": "2026-01-23T19:11:40.468455Z",
+     "iopub.status.idle": "2026-01-23T19:11:40.768806Z",
+     "shell.execute_reply": "2026-01-23T19:11:40.768077Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.classify import natural_breaks\n",
@@ -174,7 +209,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:40.770186Z",
+     "iopub.status.busy": "2026-01-23T19:11:40.770083Z",
+     "iopub.status.idle": "2026-01-23T19:11:41.636179Z",
+     "shell.execute_reply": "2026-01-23T19:11:41.635478Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.zonal import regions\n",
@@ -199,11 +241,32 @@
     "- Making Maps with Noise Functions: https://www.redblobgames.com/maps/terrain-from-noise/\n",
     "- How Aspect Works: http://desktop.arcgis.com/en/arcmap/10.3/tools/spatial-analyst-toolbox/how-aspect-works.htm#ESRI_SECTION1_4198691F8852475A9F4BC71246579FAA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
