--- a/examples/user_guide/6_Remote_Sensing.ipynb
+++ b/examples/user_guide/6_Remote_Sensing.ipynb
@@ -41,7 +41,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:44.302358Z",
+     "iopub.status.busy": "2026-01-23T19:11:44.302264Z",
+     "iopub.status.idle": "2026-01-23T19:11:45.152268Z",
+     "shell.execute_reply": "2026-01-23T19:11:45.151716Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import datashader as ds\n",
@@ -54,7 +61,8 @@
     "from datashader.transfer_functions import Images, Image\n",
     "from datashader.utils import orient_array\n",
     "import numpy as np\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "import rioxarray"
    ]
   },
   {
@@ -69,7 +77,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:45.153757Z",
+     "iopub.status.busy": "2026-01-23T19:11:45.153504Z",
+     "iopub.status.idle": "2026-01-23T19:11:49.932197Z",
+     "shell.execute_reply": "2026-01-23T19:11:49.931536Z"
+    }
+   },
    "outputs": [],
    "source": [
     "SCENE_ID = \"LC80030172015001LGN00\"\n",
@@ -91,7 +106,7 @@
     "cvs = ds.Canvas(plot_width=1024, plot_height=1024)\n",
     "layers = {}\n",
     "for name, ext in EXTS.items():\n",
-    "    layer = xr.open_rasterio(\n",
+    "    layer = rioxarray.open_rasterio(\n",
     "        f\"../../xrspatial-examples/data/{SCENE_ID}_{ext}.tiff\"\n",
     "    ).load()[0]\n",
     "    layer.name = name\n",
@@ -111,7 +126,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:49.953762Z",
+     "iopub.status.busy": "2026-01-23T19:11:49.953577Z",
+     "iopub.status.idle": "2026-01-23T19:11:52.508391Z",
+     "shell.execute_reply": "2026-01-23T19:11:52.507610Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shaded = []\n",
@@ -139,7 +161,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:52.572744Z",
+     "iopub.status.busy": "2026-01-23T19:11:52.572583Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.132048Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.131346Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import true_color\n",
@@ -166,7 +195,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:53.136451Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.136323Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.204396Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.203180Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import ndvi\n",
@@ -188,7 +224,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:53.206035Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.205922Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.304940Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.304135Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import savi\n",
@@ -210,7 +253,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:53.306735Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.306609Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.367979Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.367247Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import arvi\n",
@@ -232,7 +282,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:53.369488Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.369383Z",
+     "iopub.status.idle": "2026-01-23T19:11:53.434458Z",
+     "shell.execute_reply": "2026-01-23T19:11:53.433721Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import evi\n",
@@ -250,7 +307,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:53.436036Z",
+     "iopub.status.busy": "2026-01-23T19:11:53.435927Z",
+     "iopub.status.idle": "2026-01-23T19:11:54.137397Z",
+     "shell.execute_reply": "2026-01-23T19:11:54.136577Z"
+    }
+   },
    "outputs": [],
    "source": [
     "vegetation_index_aggs = [ndvi_agg, savi_agg, arvi_agg, evi_agg]\n",
@@ -273,7 +337,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:54.149675Z",
+     "iopub.status.busy": "2026-01-23T19:11:54.149518Z",
+     "iopub.status.idle": "2026-01-23T19:11:54.503906Z",
+     "shell.execute_reply": "2026-01-23T19:11:54.503288Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import gci\n",
@@ -298,7 +369,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:54.531693Z",
+     "iopub.status.busy": "2026-01-23T19:11:54.531538Z",
+     "iopub.status.idle": "2026-01-23T19:11:54.826744Z",
+     "shell.execute_reply": "2026-01-23T19:11:54.825489Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import nbr\n",
@@ -318,7 +396,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:54.831357Z",
+     "iopub.status.busy": "2026-01-23T19:11:54.831255Z",
+     "iopub.status.idle": "2026-01-23T19:11:55.075656Z",
+     "shell.execute_reply": "2026-01-23T19:11:55.074872Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import nbr2\n",
@@ -339,7 +424,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:55.082037Z",
+     "iopub.status.busy": "2026-01-23T19:11:55.081930Z",
+     "iopub.status.idle": "2026-01-23T19:11:55.377706Z",
+     "shell.execute_reply": "2026-01-23T19:11:55.377031Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import ndmi\n",
@@ -360,7 +452,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:55.384112Z",
+     "iopub.status.busy": "2026-01-23T19:11:55.383951Z",
+     "iopub.status.idle": "2026-01-23T19:11:55.714194Z",
+     "shell.execute_reply": "2026-01-23T19:11:55.713522Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import sipi\n",
@@ -381,7 +480,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:55.722074Z",
+     "iopub.status.busy": "2026-01-23T19:11:55.721937Z",
+     "iopub.status.idle": "2026-01-23T19:11:56.080731Z",
+     "shell.execute_reply": "2026-01-23T19:11:56.080033Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import ebbi\n",
@@ -404,7 +510,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:56.088050Z",
+     "iopub.status.busy": "2026-01-23T19:11:56.087930Z",
+     "iopub.status.idle": "2026-01-23T19:11:57.422597Z",
+     "shell.execute_reply": "2026-01-23T19:11:57.421882Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -432,7 +545,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:57.423834Z",
+     "iopub.status.busy": "2026-01-23T19:11:57.423697Z",
+     "iopub.status.idle": "2026-01-23T19:11:57.501317Z",
+     "shell.execute_reply": "2026-01-23T19:11:57.500427Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shade(terrain, cmap=Elevation, how=\"linear\")"
@@ -450,7 +570,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:57.503069Z",
+     "iopub.status.busy": "2026-01-23T19:11:57.502955Z",
+     "iopub.status.idle": "2026-01-23T19:11:58.536516Z",
+     "shell.execute_reply": "2026-01-23T19:11:58.534977Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rgba = stack(shade(terrain, cmap=Elevation, how=\"linear\")).to_pil()\n",
@@ -483,7 +610,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:58.537769Z",
+     "iopub.status.busy": "2026-01-23T19:11:58.537661Z",
+     "iopub.status.idle": "2026-01-23T19:11:58.901916Z",
+     "shell.execute_reply": "2026-01-23T19:11:58.901086Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from functools import partial\n",
@@ -531,11 +665,32 @@
     "    shade(tree_colorize, cmap=\"limegreen\", how=\"linear\"),\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
