--- a/examples/viewshed_gpu.ipynb
+++ b/examples/viewshed_gpu.ipynb
@@ -1,20 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install rasterio==1.2.10\n",
-    "!pip install xarray-spatial==0.3.5\n",
-    "!pip install rtxpy\n",
-    "!pip install numba==0.55.1\n",
-    "!pip install geopandas\n",
-    "!pip install spatialpandas"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "xehNPqCj-qLV"
@@ -39,7 +25,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:44.071988Z",
+     "iopub.status.busy": "2026-01-23T19:13:44.071895Z",
+     "iopub.status.idle": "2026-01-23T19:13:45.175172Z",
+     "shell.execute_reply": "2026-01-23T19:13:45.174625Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -49,9 +42,12 @@
     "import xarray as xr\n",
     "import numpy as np\n",
     "import cupy\n",
+    "import rioxarray\n",
     "\n",
     "from xrspatial import hillshade\n",
-    "from xrspatial import viewshed"
+    "from xrspatial import viewshed\n",
+    "\n",
+    "import rioxarray"
    ]
   },
   {
@@ -64,17 +60,27 @@
     "\n",
     "#### Raster data\n",
     "\n",
-    "The input ***elevation raster*** data covers the state of Colorado, USA. We'll load it from a local input file and calculate its bounding box to define the study area."
+    "The input ***elevation raster*** data covers the state of Colorado, USA. We'll load it from a local input file and calculate its bounding box to define the study area.\n",
+    "\n",
+    "Example data available here: https://makepath-gpu-dataset.s3.us-east-1.amazonaws.com/colorado_merge_3arc_resamp.tif"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:45.176791Z",
+     "iopub.status.busy": "2026-01-23T19:13:45.176492Z",
+     "iopub.status.idle": "2026-01-23T19:13:45.190687Z",
+     "shell.execute_reply": "2026-01-23T19:13:45.190041Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "file_name = 'colorado_merge_3arc_resamp.tif'\n",
-    "raster = xr.open_rasterio(file_name).sel(band=1).drop('band', dim=None)\n",
+    "file_name = '../xrspatial-examples/data/colorado_merge_3arc_resamp.tif'\n",
+    "\n",
+    "raster = rioxarray.open_rasterio(file_name).sel(band=1).drop_vars('band')\n",
     "raster.name = 'Colorado Elevation Raster'\n",
     "\n",
     "xmin, xmax = raster.x.data.min(), raster.x.data.max()\n",
@@ -97,7 +103,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:45.207553Z",
+     "iopub.status.busy": "2026-01-23T19:13:45.207417Z",
+     "iopub.status.idle": "2026-01-23T19:13:45.216932Z",
+     "shell.execute_reply": "2026-01-23T19:13:45.216292Z"
+    }
+   },
    "outputs": [],
    "source": [
     "top_peaks_dict = dict(\n",
@@ -137,7 +150,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:45.218048Z",
+     "iopub.status.busy": "2026-01-23T19:13:45.217939Z",
+     "iopub.status.idle": "2026-01-23T19:13:46.874157Z",
+     "shell.execute_reply": "2026-01-23T19:13:46.873240Z"
+    }
+   },
    "outputs": [],
    "source": [
     "illuminated = hillshade(raster, name='Hillshade')"
@@ -155,7 +175,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:46.875451Z",
+     "iopub.status.busy": "2026-01-23T19:13:46.875338Z",
+     "iopub.status.idle": "2026-01-23T19:13:53.619323Z",
+     "shell.execute_reply": "2026-01-23T19:13:53.618794Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, (ax1, ax2) = plt.subplots(ncols=2, figsize=(16, 7))\n",
@@ -176,7 +203,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:13:53.627657Z",
+     "iopub.status.busy": "2026-01-23T19:13:53.627505Z",
+     "iopub.status.idle": "2026-01-23T19:14:01.365162Z",
+     "shell.execute_reply": "2026-01-23T19:14:01.364420Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
@@ -202,7 +236,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:14:01.367688Z",
+     "iopub.status.busy": "2026-01-23T19:14:01.367578Z",
+     "iopub.status.idle": "2026-01-23T19:14:01.632949Z",
+     "shell.execute_reply": "2026-01-23T19:14:01.632604Z"
+    }
+   },
    "outputs": [],
    "source": [
     "raster.data = cupy.asarray(raster.data)\n",
@@ -223,7 +264,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:14:01.634384Z",
+     "iopub.status.busy": "2026-01-23T19:14:01.634277Z",
+     "iopub.status.idle": "2026-01-23T19:14:04.550123Z",
+     "shell.execute_reply": "2026-01-23T19:14:04.549467Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# invisible points from a view point are marked as -1 in the output visibility grid\n",
@@ -236,10 +284,12 @@
     "for i, peak in top_peaks.iterrows():\n",
     "    viewpoint_x, viewpoint_y = peak['geometry'].x, peak['geometry'].y\n",
     "    viewshed_grid = viewshed(raster, x=viewpoint_x, y=viewpoint_y)\n",
+    "    print(type(viewshed_grid.data))\n",
     "    # assign name for the output grid\n",
     "    viewshed_grid.name = peak['NAME']\n",
     "    # set visible cells to VISIBLE\n",
-    "    viewshed_grid = viewshed_grid.where(viewshed_grid == INVISIBLE, other=VISIBLE)\n",
+    "    mask_invisible = (viewshed_grid == INVISIBLE)\n",
+    "    viewshed_grid = mask_invisible * INVISIBLE + (~mask_invisible) * VISIBLE\n",
     "    visibility_grids.append(viewshed_grid)"
    ]
   },
@@ -255,7 +305,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:14:04.551527Z",
+     "iopub.status.busy": "2026-01-23T19:14:04.551419Z",
+     "iopub.status.idle": "2026-01-23T19:16:25.934305Z",
+     "shell.execute_reply": "2026-01-23T19:16:25.933233Z"
+    }
+   },
    "outputs": [],
    "source": [
     "nrows, ncols = 4, 5\n",
@@ -283,7 +340,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:16:25.940159Z",
+     "iopub.status.busy": "2026-01-23T19:16:25.939977Z",
+     "iopub.status.idle": "2026-01-23T19:16:26.162832Z",
+     "shell.execute_reply": "2026-01-23T19:16:26.162048Z"
+    }
+   },
    "outputs": [],
    "source": [
     "visibility_areas = np.array([len(cupy.where(v.data != INVISIBLE)[0]) for v in visibility_grids])\n",
@@ -306,7 +370,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:16:26.164387Z",
+     "iopub.status.busy": "2026-01-23T19:16:26.164227Z",
+     "iopub.status.idle": "2026-01-23T19:16:35.313020Z",
+     "shell.execute_reply": "2026-01-23T19:16:35.312434Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(12, 10))\n",
@@ -318,13 +389,34 @@
     "plt.delaxes(fig.axes[-1])\n",
     "plt.delaxes(fig.axes[-1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
