--- a/examples/user_guide/2_Proximity.ipynb
+++ b/examples/user_guide/2_Proximity.ipynb
@@ -30,7 +30,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:01.717554Z",
+     "iopub.status.busy": "2026-01-23T19:11:01.717451Z",
+     "iopub.status.idle": "2026-01-23T19:11:02.650035Z",
+     "shell.execute_reply": "2026-01-23T19:11:02.649339Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -77,7 +84,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:02.651679Z",
+     "iopub.status.busy": "2026-01-23T19:11:02.651397Z",
+     "iopub.status.idle": "2026-01-23T19:11:04.124204Z",
+     "shell.execute_reply": "2026-01-23T19:11:04.123659Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import proximity\n",
@@ -122,7 +136,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:04.145209Z",
+     "iopub.status.busy": "2026-01-23T19:11:04.145021Z",
+     "iopub.status.idle": "2026-01-23T19:11:05.567747Z",
+     "shell.execute_reply": "2026-01-23T19:11:05.567145Z"
+    }
+   },
    "outputs": [],
    "source": [
     "targets = [1, 2, 3, 4]\n",
@@ -150,7 +171,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:05.570429Z",
+     "iopub.status.busy": "2026-01-23T19:11:05.570301Z",
+     "iopub.status.idle": "2026-01-23T19:11:06.421848Z",
+     "shell.execute_reply": "2026-01-23T19:11:06.421066Z"
+    }
+   },
    "outputs": [],
    "source": [
     "proximity_agg = proximity(points_agg, distance_metric=\"GREAT_CIRCLE\")\n",
@@ -174,7 +202,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:06.423728Z",
+     "iopub.status.busy": "2026-01-23T19:11:06.423617Z",
+     "iopub.status.idle": "2026-01-23T19:11:07.032049Z",
+     "shell.execute_reply": "2026-01-23T19:11:07.031538Z"
+    }
+   },
    "outputs": [],
    "source": [
     "line_agg = cvs.line(df, x='x', y='y')\n",
@@ -195,7 +230,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:07.033322Z",
+     "iopub.status.busy": "2026-01-23T19:11:07.033225Z",
+     "iopub.status.idle": "2026-01-23T19:11:07.812586Z",
+     "shell.execute_reply": "2026-01-23T19:11:07.812068Z"
+    }
+   },
    "outputs": [],
    "source": [
     "line_proximity = proximity(line_agg)\n",
@@ -220,7 +262,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:07.814235Z",
+     "iopub.status.busy": "2026-01-23T19:11:07.814096Z",
+     "iopub.status.idle": "2026-01-23T19:11:07.860946Z",
+     "shell.execute_reply": "2026-01-23T19:11:07.860370Z"
+    }
+   },
    "outputs": [],
    "source": [
     "where_clause = (line_proximity > 1) & (line_proximity < 1.1)\n",
@@ -250,7 +299,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:07.862217Z",
+     "iopub.status.busy": "2026-01-23T19:11:07.862117Z",
+     "iopub.status.idle": "2026-01-23T19:11:08.365977Z",
+     "shell.execute_reply": "2026-01-23T19:11:08.365404Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import allocation\n",
@@ -291,7 +347,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:11:08.367401Z",
+     "iopub.status.busy": "2026-01-23T19:11:08.367288Z",
+     "iopub.status.idle": "2026-01-23T19:11:08.907528Z",
+     "shell.execute_reply": "2026-01-23T19:11:08.906920Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import direction\n",
@@ -315,8 +378,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
