--- a/examples/user_guide/7_Pathfinding.ipynb
+++ b/examples/user_guide/7_Pathfinding.ipynb
@@ -27,7 +27,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:07.776106Z",
+     "iopub.status.busy": "2026-01-23T19:12:07.776006Z",
+     "iopub.status.idle": "2026-01-23T19:12:08.727171Z",
+     "shell.execute_reply": "2026-01-23T19:12:08.726236Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -76,7 +83,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:08.728831Z",
+     "iopub.status.busy": "2026-01-23T19:12:08.728524Z",
+     "iopub.status.idle": "2026-01-23T19:12:10.774555Z",
+     "shell.execute_reply": "2026-01-23T19:12:10.774060Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import a_star_search\n",
@@ -135,7 +149,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:10.794167Z",
+     "iopub.status.busy": "2026-01-23T19:12:10.794009Z",
+     "iopub.status.idle": "2026-01-23T19:12:11.746819Z",
+     "shell.execute_reply": "2026-01-23T19:12:11.746217Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# find the path from start to goal,\n",
@@ -161,7 +182,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:11.748305Z",
+     "iopub.status.busy": "2026-01-23T19:12:11.748175Z",
+     "iopub.status.idle": "2026-01-23T19:12:11.978322Z",
+     "shell.execute_reply": "2026-01-23T19:12:11.977713Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# find the path from start to goal,\n",
@@ -189,8 +217,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
