--- a/examples/user_guide/8_Local_Tools.ipynb
+++ b/examples/user_guide/8_Local_Tools.ipynb
@@ -58,7 +58,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c7945275",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:14.575044Z",
+     "iopub.status.busy": "2026-01-23T19:12:14.574948Z",
+     "iopub.status.idle": "2026-01-23T19:12:14.815067Z",
+     "shell.execute_reply": "2026-01-23T19:12:14.814140Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -101,7 +108,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9ce0bf94",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:14.816494Z",
+     "iopub.status.busy": "2026-01-23T19:12:14.816277Z",
+     "iopub.status.idle": "2026-01-23T19:12:15.013726Z",
+     "shell.execute_reply": "2026-01-23T19:12:15.013026Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -150,7 +164,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "86353494",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:15.015205Z",
+     "iopub.status.busy": "2026-01-23T19:12:15.014961Z",
+     "iopub.status.idle": "2026-01-23T19:12:15.849282Z",
+     "shell.execute_reply": "2026-01-23T19:12:15.848722Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import cell_stats\n",
@@ -193,7 +214,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7f1b3bfa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:15.850772Z",
+     "iopub.status.busy": "2026-01-23T19:12:15.850463Z",
+     "iopub.status.idle": "2026-01-23T19:12:15.911546Z",
+     "shell.execute_reply": "2026-01-23T19:12:15.910879Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import combine\n",
@@ -230,7 +258,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b95f96c7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:15.913296Z",
+     "iopub.status.busy": "2026-01-23T19:12:15.913193Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.021873Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.021124Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import lesser_frequency\n",
@@ -269,7 +304,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78a7824e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:16.023201Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.023092Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.098012Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.097225Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import equal_frequency\n",
@@ -308,7 +350,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1c6ab615",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:16.099198Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.099091Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.177146Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.176353Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import greater_frequency\n",
@@ -347,7 +396,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b5b7b743",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:16.178377Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.178264Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.246045Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.245623Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import lowest_position\n",
@@ -385,7 +441,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cf614920",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:16.247819Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.247718Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.319960Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.319301Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import highest_position\n",
@@ -423,7 +486,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "92d44cd2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:16.321180Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.321075Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.399030Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.398285Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import popularity\n",
@@ -463,7 +533,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d10ab75",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T19:12:16.400459Z",
+     "iopub.status.busy": "2026-01-23T19:12:16.400359Z",
+     "iopub.status.idle": "2026-01-23T19:12:16.479230Z",
+     "shell.execute_reply": "2026-01-23T19:12:16.478651Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import rank\n",
@@ -484,8 +561,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
